--- a/the-best-taxi-on-this-planet.html
+++ b/the-best-taxi-on-this-planet.html
@@ -29,10 +29,9 @@
 <meta property="og:article:tag" content="UWO">
 <meta property="og:article:tag" content="Twin Otter">
 <meta property="og:article:tag" content="Taxi">
-<meta property="og:image" content="images/MESR.jpg" />
-<meta property="og:image:type" content="image/jpeg" />
-<meta name="twitter:image" content="images/MESR.jpg" />
-<meta itemprop="image" content="images/MESR.jpg" />
+<meta property="og:image" content="{filename}/images/Twin.jpg" />
+<meta name="twitter:image" content="{filename}/images/Twin.jpg" />
+<meta itemprop="image" content="{filename}/images/Twin.jpg"/>
 
 <link href="https://egodin.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Frozen dirt diaries ATOM Feed"/>
 <link href='//fonts.googleapis.com/css?family=Open+Sans:800italic' rel='stylesheet' type='text/css'>
@@ -130,7 +129,7 @@
      })();
     </script>
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+    <a href="https://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 
 </div>
  
