--- a/the-best-taxi-on-this-planet.html
+++ b/the-best-taxi-on-this-planet.html
@@ -29,9 +29,9 @@
 <meta property="og:article:tag" content="UWO">
 <meta property="og:article:tag" content="Twin Otter">
 <meta property="og:article:tag" content="Taxi">
-<meta property="og:image" content="{filename}/images/Twin.jpg" />
-<meta name="twitter:image" content="{filename}/images/Twin.jpg" />
-<meta itemprop="image" content="{filename}/images/Twin.jpg"/>
+<meta property="og:image" content="https://egodin.github.io/images/Twin.jpg" />
+<meta name="twitter:image" content="https://egodin.github.io/images/Twin.jpg" />
+<meta itemprop="image" content="https://egodin.github.io/images/Twin.jpg"/>
 
 <link href="https://egodin.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Frozen dirt diaries ATOM Feed"/>
 <link href='//fonts.googleapis.com/css?family=Open+Sans:800italic' rel='stylesheet' type='text/css'>
