Completed twitter card - activated disqus
Completed twitter card - activated disqus

--- a/pages/contributions.html
+++ b/pages/contributions.html
@@ -468,7 +468,7 @@ Feb, Colloque du CEN 2014, INRS, Québec, Québec, Canada.</p>
 
 <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-var disqus_shortname = 'egodin'; // required: replace example with your forum shortname
+var disqus_shortname = 'Frozendirt'; // required: replace example with your forum shortname
 
 /* * * DON'T EDIT BELOW THIS LINE * * */
 (function () {
