--- a/arrival-at-london.html
+++ b/arrival-at-london.html
@@ -27,10 +27,9 @@
 <meta property="og:article:published_time" content="2016-05-02" />
 <meta property="og:article:author" content="Etienne Godin" >
 <meta property="og:article:tag" content="UWO">
-<meta property="og:image" content="images/MESR.jpg" />
-<meta property="og:image:type" content="image/jpeg" />
-<meta name="twitter:image" content="images/MESR.jpg" />
-<meta itemprop="image" content="images/MESR.jpg" />
+<meta property="og:image" content="https://egodin.github.io/images/MiddlesexCollegeUWO.jpg" />
+<meta name="twitter:image" content="https://egodin.github.io/images/MiddlesexCollegeUWO.jpg" />
+<meta itemprop="image" content="https://egodin.github.io/images/MiddlesexCollegeUWO.jpg"/>
 
 <link href="https://egodin.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Frozen dirt diaries ATOM Feed"/>
 <link href='//fonts.googleapis.com/css?family=Open+Sans:800italic' rel='stylesheet' type='text/css'>
@@ -113,7 +112,7 @@
     <div id="disqus_thread"></div>
     <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'egodin'; // required: replace example with your forum shortname
+    var disqus_shortname = 'Frozendirt'; // required: replace example with your forum shortname
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
@@ -275,7 +274,7 @@
 
 <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-var disqus_shortname = 'egodin'; // required: replace example with your forum shortname
+var disqus_shortname = 'Frozendirt'; // required: replace example with your forum shortname
 
 /* * * DON'T EDIT BELOW THIS LINE * * */
 (function () {
