--- a/arrival-at-resolute-nu.html
+++ b/arrival-at-resolute-nu.html
@@ -8,7 +8,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Arrival at Resolute, NU</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="">
+<meta name="description" content="Resolute Bay - my first time ever on Cornwallis Island; and I will finally meet the PCSP staff in person, after all these years over the long-wave radio and Iridium!">
 <link rel="shortcut icon" href="https://egodin.github.io/favicon.ico" type="">
 <meta name="author" content="Etienne Godin">
 <meta name="copyright" content="Etienne Godin">
@@ -22,13 +22,14 @@
 <meta name="twitter:title" content="Arrival at resolute, nu" />
 <meta name="twitter:url" content="https://egodin.github.io/arrival-at-resolute-nu.html" />
 <meta itemprop="url" content="https://egodin.github.io/arrival-at-resolute-nu.html" />
+<meta property="og:description" content="Resolute Bay - my first time ever on Cornwallis Island; and I will finally meet the PCSP staff in person, after all these years over the long-wave radio and Iridium!" />
+<meta name="twitter:description" content="Resolute Bay - my first time ever on Cornwallis Island; and I will finally meet the PCSP staff in person, after all these years over the long-wave radio and Iridium!" />
 <meta property="og:article:published_time" content="2016-07-16" />
 <meta property="og:article:author" content="Etienne Godin" >
 <meta property="og:article:tag" content="UWO">
-<meta property="og:image" content="images/MESR.jpg" />
-<meta property="og:image:type" content="image/jpeg" />
-<meta name="twitter:image" content="images/MESR.jpg" />
-<meta itemprop="image" content="images/MESR.jpg" />
+<meta property="og:image" content="https://egodin.github.io/images/PCSP072016.JPG" />
+<meta name="twitter:image" content="https://egodin.github.io/images/PCSP072016.JPG" />
+<meta itemprop="image" content="https://egodin.github.io/images/PCSP072016.JPG"/>
 
 <link href="https://egodin.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Frozen dirt diaries ATOM Feed"/>
 <link href='//fonts.googleapis.com/css?family=Open+Sans:800italic' rel='stylesheet' type='text/css'>
@@ -96,7 +97,7 @@
         <a href="https://twitter.com/intent/tweet?text=Arrival%20at%20Resolute%2C%20NU&url=https://egodin.github.io/arrival-at-resolute-nu.html&via=etiennegodin" onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;" class="uk-button uk-visible-small" target="_blank"><i class="uk-icon-twitter"></i> Tweet</a>
         <a href="https://plus.google.com/share?url=https://egodin.github.io/arrival-at-resolute-nu.html" onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;" target="_blank" class="uk-button uk-visible-small"><i class="uk-icon-google-plus-square"></i> Share</a>
 
-        <p class="uk-article-lead" itemprop="description"></p>
+        <p class="uk-article-lead" itemprop="description">Resolute Bay - my first time ever on Cornwallis Island; and I will finally meet the PCSP staff in person, after all these years over the long-wave radio and Iridium!</p>
         <section itemprop="articleBody"><p>Just arrived at Resolute Bay, Nunavut, yesterday. This is presently my first time on Cornwallis Island and also the most northern location I ever went.</p>
 <div class="figure align-center">
 <img alt="PCSP" src="https://egodin.github.io/images/PCSP072016.JPG" style="width: 300px;" />
@@ -121,7 +122,7 @@
     <div id="disqus_thread"></div>
     <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'egodin'; // required: replace example with your forum shortname
+    var disqus_shortname = 'Frozendirt'; // required: replace example with your forum shortname
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
@@ -283,7 +284,7 @@
 
 <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-var disqus_shortname = 'egodin'; // required: replace example with your forum shortname
+var disqus_shortname = 'Frozendirt'; // required: replace example with your forum shortname
 
 /* * * DON'T EDIT BELOW THIS LINE * * */
 (function () {
