--- a/categories.html
+++ b/categories.html
@@ -304,7 +304,7 @@
 
 <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-var disqus_shortname = 'egodin'; // required: replace example with your forum shortname
+var disqus_shortname = 'Frozendirt'; // required: replace example with your forum shortname
 
 /* * * DON'T EDIT BELOW THIS LINE * * */
 (function () {
