--- a/drafts/new-post.html
+++ b/drafts/new-post.html
@@ -103,7 +103,7 @@
     <div id="disqus_thread"></div>
     <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'egodin'; // required: replace example with your forum shortname
+    var disqus_shortname = 'Frozendirt'; // required: replace example with your forum shortname
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
@@ -265,7 +265,7 @@
 
 <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-var disqus_shortname = 'egodin'; // required: replace example with your forum shortname
+var disqus_shortname = 'Frozendirt'; // required: replace example with your forum shortname
 
 /* * * DON'T EDIT BELOW THIS LINE * * */
 (function () {
