--- a/pages/contributions.html
+++ b/pages/contributions.html
@@ -466,7 +466,7 @@ Feb, Colloque du CEN 2014, INRS, Québec, Québec, Canada.</p>
 
 <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-var disqus_shortname = 'Frozendirt'; // required: replace example with your forum shortname
+var disqus_shortname = ''; // required: replace example with your forum shortname
 
 /* * * DON'T EDIT BELOW THIS LINE * * */
 (function () {
