--- a/in-the-air-late-arrival-is-still-an-arrival.html
+++ b/in-the-air-late-arrival-is-still-an-arrival.html
@@ -29,10 +29,9 @@
 <meta property="og:article:tag" content="UWO">
 <meta property="og:article:tag" content="Twin Otter">
 <meta property="og:article:tag" content="Taxi">
-<meta property="og:image" content="images/MESR.jpg" />
-<meta property="og:image:type" content="image/jpeg" />
-<meta name="twitter:image" content="images/MESR.jpg" />
-<meta itemprop="image" content="images/MESR.jpg" />
+<meta property="og:image" content="https://egodin.github.io/images/DAY1Camp.JPG" />
+<meta name="twitter:image" content="https://egodin.github.io/images/DAY1Camp.JPG" />
+<meta itemprop="image" content="https://egodin.github.io/images/DAY1Camp.JPG"/>
 
 <link href="https://egodin.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Frozen dirt diaries ATOM Feed"/>
 <link href='//fonts.googleapis.com/css?family=Open+Sans:800italic' rel='stylesheet' type='text/css'>
